--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ body{
     text-align: center;
     font-family: "Open Sans", sans-serif;
     text-decoration: none;
+    background-image: url('assets/background.png');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 
 img.headshot{
